Simplify(or break) build, update maven